# jimmy

./: .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  PROJECT.md  README.md
.github/: FUNDING.yml  README.md
.github/workflows/: deploy-website.yml  pr-build.yml  release.yml
docs/: BUILD.md  CI_WORKFLOWS.md  INSTALL.md  USAGE.md
src/: ChordParser.h  LyricsEditor.h  MidiChordImporter.h  MidiExporter.h  MidiImporter.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SectionManager.h  SharedState.h  SongModel.h  TeleprompterView.h  Theme.h
tests/: ChordParserTests.cpp  LyricsEditorTests.cpp  MidiChordImporterTests.cpp  MidiExporterTests.cpp  MidiImporterTests.cpp  SharedStateTests.cpp  SongModelTests.cpp  ThemeTests.cpp
website/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
website/src/: App.tsx  index.css
